media query added but having issues with spacing

--- a/src/homepage/navbar.css
+++ b/src/homepage/navbar.css
@@ -3,7 +3,7 @@
     box-shadow: 0 2px 8px 0 rgba(0,0,0,.25);
     font-family: nimbus-sans-condensed,sans-serif;
     text-transform: uppercase;
-    font-size: .880rem;
+    font-size: .875rem;
 }
 
 .navbar-wrapper {
@@ -51,3 +51,44 @@ button {
     border: none;
     outline: none;
 }
+
+@media only screen and (max-width: 1439px) {
+    .navbar-wrapper {
+        height: 100px;
+        display: flex;
+        margin: 0 auto;
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .logo {
+        width: 14%;
+        margin: 0 0 0 2%;
+    }
+    
+    .navtabs-wrapper {
+        width: 62%;
+    }
+
+    .order-button {
+        width: 15%;
+        margin: 0 2% 0 0;
+    }
+
+    button {
+        background-color:  #e31b23;
+        color: #fff;
+        height: 3rem;
+        border-radius: 1.5rem;
+        padding: 0 0.875rem 0 1.25rem;
+        text-decoration: none;
+        font-family: inherit;
+        text-transform: inherit;
+        border: none;
+        outline: none;
+    }
+
+    img {
+        width: 61%;
+    }
+  }
